# trailhead

./: .gitignore  LICENSE  README.md  pyproject.toml
.cindex/: db.sqlite
.github/workflows/: publish.yml
docs/: architecture-blog-post.md  cindex-refactor-blog-draft.md
scripts/: check_db.py  find_missing_docstrings.py  run_starter_query.py
src/cindex/: __init__.py  cli.py
src/cindex/cli/: __main__.py  app.py
src/cindex/cli/commands/: embed.py  index.py  query.py  serve.py
src/cindex/server/: __init__.py  __main__.py  app.py
src/cindex/server/templates/: query_ui.html
src/cindex/services/: __init__.py
src/cindex/services/config/: __init__.py
src/cindex/services/embeddings/: __init__.py  generator.py  model_store.py
src/cindex/services/indexing/: __init__.py  graph.py  graph_query.py  live_indexer.py  parser.py  query.py  query_templates.py  sqlite_store.py  walker.py
src/cindex/services/indexing/adapters/: __init__.py  base.py  bash.py  c.py  cpp.py  csharp.py  go.py  html.py  java.py  javascript.py  lua.py  php.py  python.py  registry.py  ruby.py  rust.py  typescript.py
src/tests/: conftest.py  test_config.py  test_embeddings.py  test_indexing.py  test_live_indexer.py  test_query.py  test_server.py  test_smoke.py
src/trailhead/: __init__.py
src/trailhead/cli/: __main__.py  app.py
src/trailhead/cli/commands/: embed.py  index.py  query.py  serve.py
src/trailhead/server/: __init__.py  __main__.py  app.py  rate_limit.py
src/trailhead/services/: __init__.py
src/trailhead/services/config/: cache.py  models.py
src/trailhead/services/embeddings/: generator.py
src/trailhead/services/indexing/: __init__.py  discovery.py  graph.py  live_indexer.py  parser.py  query.py  query_templates.py  sqlite_store.py  walker.py
src/trailhead/services/indexing/adapters/: __init__.py  base.py  bash.py  c.py  cpp.py  csharp.py  go.py  html.py  java.py  javascript.py  php.py  python.py  registry.py  ruby.py  rust.py  typescript.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_indexing.py  test_live_indexer.py  test_query.py  test_server.py  test_smoke.py
