[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cindex"
dynamic = ["version"]
description = "A minimal command-line Python project scaffold for cindex."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cliff" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cindex = "cindex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cindex.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
