[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cindex"
dynamic = ["version"]
description = "A command-line tool for generating text embeddings with sentence-transformers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cliff" }
]
dependencies = [
  "sentence-transformers",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "sqliteai-vector",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
cindex = "cindex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cindex.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
