[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailhead"
dynamic = ["version"]
description = "A command-line tool for generating text embeddings with sentence-transformers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cliff" }
]
dependencies = [
  "sentence-transformers",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "sqliteai-vector",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
# Install individual language groups as needed, or use [all-languages] for everything.
javascript = ["tree-sitter-javascript>=0.21"]
typescript = ["tree-sitter-typescript>=0.21"]
rust = ["tree-sitter-rust>=0.21"]
go = ["tree-sitter-go>=0.21"]
java = ["tree-sitter-java>=0.21"]
csharp = ["tree-sitter-c-sharp>=0.21"]
c = ["tree-sitter-c>=0.21"]
cpp = ["tree-sitter-cpp>=0.21"]
ruby = ["tree-sitter-ruby>=0.21"]
php = ["tree-sitter-php>=0.21"]
bash = ["tree-sitter-bash>=0.21"]
html = ["tree-sitter-html>=0.21"]
all-languages = [
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "tree-sitter-rust>=0.21",
  "tree-sitter-go>=0.21",
  "tree-sitter-java>=0.21",
  "tree-sitter-c-sharp>=0.21",
  "tree-sitter-c>=0.21",
  "tree-sitter-cpp>=0.21",
  "tree-sitter-ruby>=0.21",
  "tree-sitter-php>=0.21",
  "tree-sitter-bash>=0.21",
  "tree-sitter-html>=0.21",
]

[project.scripts]
th = "cindex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cindex.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
